--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "body-parser": "^1.14.2",
     "bower": "^1.7.2",
     "express": "^4.13.3",
+    "mongoose": "^4.3.4",
     "nodemon": "^1.8.1",
     "redis": "^2.4.2",
     "request": "^2.67.0",
     "require": "^2.4.20",
     "requirejs": "^2.1.22",
-    "socket.io": "^1.3.7"
+    "socket.io": "https://registry.npmjs.org/socket.io/-/socket.io-1.3.7.tgz"
   },
   "devDependencies": {
     "chai": "^3.4.1",
