--- a/package.json
+++ b/package.json
@@ -17,5 +17,15 @@
     "require": "^2.4.20",
     "requirejs": "^2.1.22",
     "socket.io": "https://registry.npmjs.org/socket.io/-/socket.io-1.3.7.tgz"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-concurrent": "^2.1.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.4.1"
   }
 }
