--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "^0.2.10",
     "body-parser": "^1.14.2",
     "bower": "^1.7.2",
+    "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "mongoose": "^4.3.4",
     "nodemon": "^1.8.1",
